# fast-pysqlparse

./: .gitignore  API_DOC.md  API_DOCUMENTATION.md  API_DOC_CN.md  LICENSE  README.md  README_CN.md  build.conf  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
fast_sqlparse/: __init__.py  sql.py
fast_sqlparse/statement/: __init__.py  cte.py  delete.py  insert.py  query.py  table_ddl.py  update.py  view.py
fastsqlparse/: __init__.py  conf.py  parser.py  pysqlparser.cp310-win_amd64.pyd  pysqlparser.cp311-win_amd64.pyd  pysqlparser.cp312-win_amd64.pyd  pysqlparser.cp313-win_amd64.pyd  pysqlparser.cp314-win_amd64.pyd  pysqlparser.pyi  sql.py
fastsqlparse/statement/: __init__.py  cte.py  delete.py  insert.py  query.py  table_ddl.py  update.py  view.py
pysqlparse/: __init__.py  conf.py  sql.py
pysqlparse/statement/: __init__.py  cte.py  delete.py  insert.py  query.py  table_ddl.py  update.py  view.py
test/: python_parsers_10m.py  quick_test.py  sqlparse_test.py  test_fastsqlparse.py
