[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-pysqlparse"
version = "0.2.3"
description = "A fast SQL parser with Python wrapper and C++ core"
readme = "README.md"
authors = [
    {name = "NohaltSial", email = "sail2345@qq.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["sql", "parser", "ast", "fast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/Nohaltsail/fast-pysqlparse"
Repository = "https://github.com/Nohaltsail/fast-pysqlparse.git"
Issues = "https://github.com/Nohaltsail/fast-pysqlparse/issues"

[tool.setuptools]
packages = {find = {include = ["fastsqlparse", "fastsqlparse.*"]}}

[tool.setuptools.package-data]
fastsqlparse = ["*.so", "*.pyd", "**/*.so", "**/*.pyd"]
